--- a/theme/main.html
+++ b/theme/main.html
@@ -13,12 +13,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <!-- Prism syntax highlighting -->
-    <script src="prism.js"></script>
-    <link rel="stylesheet" href="prism.css" type="text/css" />
+    <script src="./js/prism.js"></script>
+    <link rel="stylesheet" href="./css/prism.css" type="text/css" />
 
     <!-- Custom styling and CSS -->
-    <link href="styles.css" rel="stylesheet" type="text/css" />
-    <script src="script.js"></script>
+    <link href="./css/styles.css" rel="stylesheet" type="text/css" />
+    <script src="./js/script.js"></script>
 
 
     <title>CSE 12X Self-Placement</title>
