--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <p>
             We're excited that you are interested in taking an introductory computer science course! Our
-            <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses">CSE 121, 122 and 123
+            <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">CSE 121, 122 and 123
             programming courses</a> are designed for all students, regardless of how much prior experience you do or do not have and
             regardless of your goals or reasons for taking the course. In that spirit, we want everyone to take the right first course
             for them, especially since prior experience can come in many different forms. This self-placement will help you find that
@@ -1147,18 +1147,18 @@ public class Example6 {
             <h1><span class="badge bg-success">CSE 121</span></h1>
             <p>
                 Since you don't have any previous programming experience, we recommend you take
-                <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse121">
+                <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse121">
                 CSE 121</a>. This course will start from the very beginning and will help you learn basic programming skills
                 along with other students with limited experience.
             </p>
             <p>
                 If you're more interested in using programming as a tool for data analysis and visualization,
-                you might also want to consider <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse160">
+                you might also want to consider <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse160">
                 CSE 160</a>. This course also does not require any previous experience and focuses on using programming in Python
                 to solve problems using data sets drawn from the sciences, engineering, business and the humanities.
             </p>
             <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses">
+                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
                 introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
                 advising team</a>.
             </p>
@@ -1168,11 +1168,11 @@ public class Example6 {
             <h1><span class="badge bg-success">CSE 121</span></h1>
             <p>
                 Although you have some previous programming experience, it sounds like you're still not entirely confident with some
-                topics. We recommend you take <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse121">
+                topics. We recommend you take <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse121">
                 CSE 121</a> to help you solidfy your understanding of that material before moving on to CSE 122.
             </p>
             <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses">
+                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
                 introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
                 advising team</a>.
             </p>
@@ -1181,13 +1181,13 @@ public class Example6 {
         <div class="mb-3 alert alert-success result" role="alert" id="result-122" style="display:none">
             <h1><span class="badge bg-success">CSE 122</span></h1>
             <p>
-                You seem to have a solid grasp of the basics, so we recommend you take <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse122">
+                You seem to have a solid grasp of the basics, so we recommend you take <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse122">
                 CSE 122</a>. This course will help you take the next step with your programming skills and learn to apply the concepts
                 you already know in new and exciting ways. CSE 122 is taught in Java, but is designed for students with a wide range of previous experiences,
                 so you should feel confident enrolling even if your experience is in another programming language.
             </p>
             <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses">
+                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
                 introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
                 advising team</a>.
             </p>
@@ -1196,17 +1196,17 @@ public class Example6 {
         <div class="mb-3 alert alert-success result" role="alert" id="result-122-from-142" style="display:none">
             <h1><span class="badge bg-success">CSE 122</span></h1>
             <p>
-                You seem to have a solid grasp of the basics, so we recommend you take <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse122">
+                You seem to have a solid grasp of the basics, so we recommend you take <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse122">
                 CSE 122</a>. This course will help you take the next step with your programming skills and learn to apply the concepts
                 you already know in new and exciting ways.
             </p>
             <p>
-                Since you previously took CSE 142, you may also want to consider enrolling in <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse143">
+                Since you previously took CSE 142, you may also want to consider enrolling in <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse143">
                 CSE 143</a>, which is being offered a few more times. This course is the direct follow-up to CSE 142 and will more closely align with your experience having
                 previously taken CSE 142.
             </p>
             <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses">
+                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
                 introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
                 advising team</a>.
             </p>
@@ -1216,14 +1216,14 @@ public class Example6 {
             <h1><span class="badge bg-success">CSE 123</span></h1>
             <p>
                 You have a lot of experience programming and have a strong understanding of some more advanced topics, so we recommend
-                you take <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse123">
+                you take <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse123">
                 CSE 123</a>. This course will teach you to use your existing programming skills to implement and manipulate complex
                 data structures, and will also introduce some more advanced programming concepts.
             </p>
 	    <!--
             <p class="alert alert-warning" role="alert">
                 <em>Note:</em> CSE 123 will be offered for the first time in Winter 2023. If you would like to take a CSE course in Autumn 2022,
-                we recommend you consider <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse154">CSE 154: 
+                we recommend you consider <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse154">CSE 154: 
                 Web Programming</a>. If you believe you need to complete the introductory programming sequence in Autumn 2022, please contact our
                 <a target="new" href="https://www.cs.washington.edu/academics/ugrad/advising">advising team</a> for assistance.
 
@@ -1231,13 +1231,13 @@ public class Example6 {
 	    -->
             <p>
                 If you're more interested in using programming as a tool for data analysis and visualization,
-                you might also want to consider <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse163">
+                you might also want to consider <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse163">
                 CSE 163</a>. This course builds on previous programming experience similarly to CSE 123, but with a focus on writing programs
                 that manipulate and analyze different types of datasets. CSE 163 is taught in Python, but is designed to help students who have
                 previously programmed in Java adapt, so you should feel confident enrolling even if you've never used Python before.
             </p>
             <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses">
+                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
                 introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
                 advising team</a>.
             </p>
@@ -1247,33 +1247,33 @@ public class Example6 {
             <h1><span class="badge bg-success">CSE 123</span></h1>
             <p>
                 You have a lot of experience programming and have a strong understanding of some more advanced topics, so we recommend
-                you take <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse123">
+                you take <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse123">
                 CSE 123</a>. This course will teach you to use your existing programming skills to implement and manipulate complex
                 data structures, and will also introduce some more advanced programming concepts.
             </p>
             <p>
-                Since you previously took CSE 142, you may also want to consider enrolling in <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse143">
+                Since you previously took CSE 142, you may also want to consider enrolling in <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse143">
                 CSE 143</a>, which is being offered a few more times. This course is the direct follow-up to CSE 142 and will more closely align with your experience having
                 previously taken CSE 142.
             </p>
 	    <!--
             <p class="alert alert-warning" role="alert">
                 <em>Note:</em> CSE 123 will be offered for the first time in Winter 2023. If you would like to take a CSE course in Autumn 2022,
-                we recommend you consider <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse154">CSE 154: 
-                Web Programming</a>. Since you previously took CSE 142, you may also want to consider enrolling in <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse143">
+                we recommend you consider <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse154">CSE 154: 
+                Web Programming</a>. Since you previously took CSE 142, you may also want to consider enrolling in <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse143">
                 CSE 143</a>, which is being offered a few more times. This course is the direct follow-up to CSE 142 and will more closely align with your experience having
                 previously taken CSE 142.
             </p>            
 	    -->
             <p>
                 If you're more interested in using programming as a tool for data analysis and visualization,
-                you might also want to consider <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses#cse163">
+                you might also want to consider <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse163">
                 CSE 163</a>. This course builds on previous programming experience similarly to CSE 123, but with a focus on writing programs
                 that manipulate and analyze different types of datasets. CSE 163 is taught in Python, but is designed to help students who have
                 previously programmed in Java adapt, so you should feel confident enrolling even if you've never used Python before.
             </p>
             <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/ugrad/nonmajor-options/intro-courses">
+                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
                 introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
                 advising team</a>.
             </p>
