Refactor common text for all results

--- a/index.html
+++ b/index.html
@@ -1157,11 +1157,6 @@ public class Example6 {
                 CSE 160</a>. This course also does not require any previous experience and focuses on using programming in Python
                 to solve problems using data sets drawn from the sciences, engineering, business and the humanities.
             </p>
-            <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
-                introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
-                advising team</a>.
-            </p>
         </div>
 
         <div class="mb-3 alert alert-success result" role="alert" id="result-121-topics" style="display:none">
@@ -1170,11 +1165,6 @@ public class Example6 {
                 Although you have some previous programming experience, it sounds like you're still not entirely confident with some
                 topics. We recommend you take <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse121">
                 CSE 121</a> to help you solidfy your understanding of that material before moving on to CSE 122.
-            </p>
-            <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
-                introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
-                advising team</a>.
             </p>
         </div>
 
@@ -1185,11 +1175,6 @@ public class Example6 {
                 CSE 122</a>. This course will help you take the next step with your programming skills and learn to apply the concepts
                 you already know in new and exciting ways. CSE 122 is taught in Java, but is designed for students with a wide range of previous experiences,
                 so you should feel confident enrolling even if your experience is in another programming language.
-            </p>
-            <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
-                introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
-                advising team</a>.
             </p>
         </div>
 
@@ -1204,11 +1189,6 @@ public class Example6 {
                 Since you previously took CSE 142, you may also want to consider enrolling in <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#cse143">
                 CSE 143</a>, which is being offered a few more times. This course is the direct follow-up to CSE 142 and will more closely align with your experience having
                 previously taken CSE 142.
-            </p>
-            <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
-                introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
-                advising team</a>.
             </p>
         </div>
 
@@ -1235,11 +1215,6 @@ public class Example6 {
                 CSE 163</a>. This course builds on previous programming experience similarly to CSE 123, but with a focus on writing programs
                 that manipulate and analyze different types of datasets. CSE 163 is taught in Python, but is designed to help students who have
                 previously programmed in Java adapt, so you should feel confident enrolling even if you've never used Python before.
-            </p>
-            <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
-                introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
-                advising team</a>.
             </p>
         </div>
 
@@ -1272,11 +1247,6 @@ public class Example6 {
                 that manipulate and analyze different types of datasets. CSE 163 is taught in Python, but is designed to help students who have
                 previously programmed in Java adapt, so you should feel confident enrolling even if you've never used Python before.
             </p>
-            <p>
-                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
-                introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
-                advising team</a>.
-            </p>
         </div>        
 
         <div class="mb-3 alert alert-warning result" role="alert" id="result-adv" style="display:none">
@@ -1287,6 +1257,11 @@ public class Example6 {
                 advising team</a> so they can learn more about your situation and help you find the best fit.
             </p>
         </div>
+            <p class="result" id="learn-more" style="display:none">
+                You can learn more about all of our <a target="new" href="https://www.cs.washington.edu/academics/undergraduate/non-major-options/#intro-courses">
+                introductory course options</a> on the Allen School website. If you have any more questions, feel free to reach out to our <a href="mailto:course-placement@cs.washington.edu?subject=CSE 12X Self-Placement Question">course placement 
+                advising team</a>.
+            </p>
     </div>
     <footer>
         <hr />
