Add NU study recruitment info.

--- a/index.html
+++ b/index.html
@@ -1263,9 +1263,24 @@ public class Example6 {
                 advising team</a>.
             </p>
     </div>
+
+    <div class = "mb-3 alert alert-info" role="alert" id="recruit" style="display:none">
+	<p>Thank you for taking the CSE 12X Guided Self-Placement Survey.</p>
+	<p>To help us understand and improve the self-placement process, we invite you to participate in a research study that seeks to understand students' journeys through and beyond the CSE 12X sequence. If you choose to participate in the study, you will be asked to fill out surveys periodically over the next few years. Each survey will take about 10-20 minutes, and you will fill them out at most three times per quarter, with lower frequency later on. There will be a total of 9 to 11 surveys over two years.</p>
+	<p>A few things to know:</p>
+	<ul>
+	    <li>You can choose whether or not to participate in this study, and your decision does not impact your grades, student standing, or relationship with the University of Washington Seattle or Northwestern University.</li>
+	    <li>You can stop participating in this study without penalty at any time by emailing the research team at <a href="mailto:melissac@u.northwestern.edu">melissac@u.northwestern.edu</a>.</li>
+	    <li>You must be 18 years old or older to sign up for the study and enrolled at the University of Washington Seattle</li>
+	    <li>This study has been approved by the Northwestern IRB STU00223900: Evaluating the impact of the self-placement process for introductory computer science courses. The PI for the study is Professor Eleanor O'Rourke.</li>
+	    <li>If you fill out all of the surveys for a given quarter, you will be entered in a raffle to receive a $20 gift card each quarter with a 1 in 30 chance of winning a gift card.</li>
+	</ul>
+	<p>To learn more about this study and/or consent to participate, please fill out <a href="https://northwestern.az1.qualtrics.com/jfe/form/SV_a366Fk7VhMeAVBI">the consent form</a>.</p>
+	<p>If you have any questions, please reach out to the graduate student investigator, Melissa Chen, at <a href="mailto:melissac@u.northwestern.edu">melissac@u.northwestern.edu</a>.</p>
+    </div>
     <footer>
         <hr />
-        <em><small>Last updated: July 26, 2023</small></em>
+        <em><small>Last updated: May 21, 2025</small></em>
     </footer>
     </main>
   </body>
